[package]
name = "ent"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
glob = "0.3.1"
inventory = "0.3.15"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
stone_recipe = { git = "https://github.com/serpent-os/tools.git", version = "0.24.2" }
thiserror = "1.0.66"
