[package]
name = "ent"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
futures-util = "0.3.31"
glob = "0.3.1"
indicatif = "0.17.8"
inventory = "0.3.15"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
stone_recipe = { git = "https://github.com/serpent-os/tools.git", version = "0.24.2" }
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["full"] }
